SERVER-72596 Fix symbolization for large stacktraces with libunwind